# pycheckit

./: .gitignore  Makefile  PROJEKT_ÜBERSICHT.md  README.md  STATUS.txt  TESTING_MIGRATION.md  file_list.py  main.py  pycheckit.py  pycheckit.spec  pycheckit_cli.py  pyproject.toml  python-pycheckit.conf  python-pycheckit.spec  setup.py  test_basic.py  test_debug.py  test_e2e.py  test_integration.py
.tito/: tito.props
.tito/templates/: version.py.template
doc/: ABOUT.md  COMPATIBILITY_TESTING.md  CONVERSION_SUMMARY.md  DEVELOPMENT.md  FILES.md  KNOWN_BUGS.md  PACKAGE_STRUCTURE.md  QUICKSTART.md  STATUS.txt
man/: Makefile  pycheckit.1.asciidoc
src/pycheckit/: __init__.py  __main__.py  cli.py  constants.py  core.py  crc64.c  crc64.pyx  crc64_pure.py  crc64_wrapper.py  version.py
testing/: README.md  __init__.py  conftest.py  test_cli.py  test_core.py  test_crc64.py  test_file_list.py  test_imports.py
