[project]
name = "pycheckit"
version = "0.1.6a0"
description = "A file checksummer and integrity tester using CRC64 checksums stored as extended attributes"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "xattr>=0.10.0",
]
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Dennis Katsonis"},
    {name = "Joachim Katzer"},
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pycheckit = "pycheckit.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
ext-modules = [
    {name = "pycheckit.crc64", sources = ["src/pycheckit/crc64.pyx"]}
]

[tool.setuptools.data-files]
"share/man/man1" = ["man/pycheckit.1"]

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
